fix: updated swagger doc
